change z-index in hopes of fixing safari modal issue when viewed as iframe

--- a/css/main.css
+++ b/css/main.css
@@ -6064,6 +6064,7 @@ button.close {
 
 .modal-open {
   overflow: hidden;
+  z-index: 1;
 }
 
 .modal {
